--- a/index.html
+++ b/index.html
@@ -315,7 +315,7 @@
                     <img src="./Projets/Logeproj/création table type base mae.png" alt="Photo" class="popup-image">
                   </td>
                   <td>
-                    <p class="popup-table-text text-justify">a</p>
+                    <p class="popup-table-text text-justify">Une application sous forme de MVC comprends un modèle (contient les données à afficher), une vue (contient la présentation de l'interface graphique) et un controller (contient la logique concernant les actions effectuées par l'utilisateur). Le but du travaux pratique était de créer une vue et un contrôleur pour une table de la base de données et avec un modèle déjà existant. La vue contient un fichier html (structure de la page), un fichier scss (optionnel, pour appliquer un style spécifique à la page) et un fichier typescript (interactions entre l'API (application programming interface) et la vue). Le contrôleur effectue les interactions entre la base de données et l'API.</p>
                   </td>
                 </tr>
               </table>
@@ -345,7 +345,7 @@
                     <img src="./Projets/Logeproj/ajout colonne type base mae.png" alt="Photo" class="popup-image">
                   </td>
                   <td>
-                    <p class="popup-table-text text-justify">a</p>
+                    <p class="popup-table-text text-justify">Pour le dernier travaux pratique, l'objectif était d'ajouter dans une colonne d'une table déjà existante de la base de données, puis d'afficher son contenu dans la vue du premier travaux pratique présenté. La colonne a été crée via un script sql enregistré dans un fichier pour ajouter la colonne en question sur toutes les instances déployées de logeproj. Le DAO, le contrôleur, le modèle et la vue doivent ensuite être modifiés.</p>
                   </td>
                 </tr>
               </table>
