--- a/index.html
+++ b/index.html
@@ -982,6 +982,7 @@
 
         <div class="content-frame position-change-frame">
           <h1 class="titre-section">Le tableau des compétences</h1>
+          <p><a href="./BTS SIO/8 - BTS SIO - Annexe 8-1 - Tableau de synthèse - Epreuve E4 - BTS SIO 2024.xlsx" class="bouncing-letters">Télécharger</a></p>
           <iframe src="./BTS SIO/Tableau des compétences.html" class="table-picture" allowTransparency="true" scrolling="yes" frameborder="0">
           </iframe>
         </div>
